ops/docker/out/base/grafana-deployment.yaml
#! grafana-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: grafana
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: grafana
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker
            com.docker.compose.service: grafana
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker
                com.docker.compose.service: grafana
                com.docker.compose.network.microservices-network: "true"
        spec:
            containers:
                - name: grafana
                  image: grafana/grafana:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: grafana-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: etc-grafana-provisioning-datasources-datasources-yaml
                      mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
            volumes:
                - name: etc-grafana-provisioning-datasources-datasources-yaml
                  hostPath:
                    path: /Users/bngams/Courses/cesi/maalsi-24-ORL/microservices-demo/ops/config/obs/grafana-datasources.yml
