ops/docker/out/base/postgres-kong-db-deployment.yaml
#! postgres-kong-db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-kong-db
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: postgres-kong-db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: docker
            com.docker.compose.service: postgres-kong-db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: docker
                com.docker.compose.service: postgres-kong-db
                com.docker.compose.network.microservices-network: "true"
        spec:
            containers:
                - name: kong-db
                  image: postgres:15
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U kong
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: postgres-k-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: postgres-kong-db-postgres-data-kong
