ops/docker/out/base/consul-expose.yaml
#! consul-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: consul
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: consul
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: consul
    ports:
        - name: consul-8500
          port: 8500
          targetPort: consul-8500
        - name: consul-8600
          port: 8600
          targetPort: consul-8600
