ops/docker/out/base/consul-service.yaml
# check if there is at least one published port

#! consul-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: consul-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: consul
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: consul
    ports:
        - name: consul-8500
          port: 8500
          protocol: TCP
          targetPort: consul-8500
        - name: consul-8600
          port: 8600
          protocol: UDP
          targetPort: consul-8600

# check if there is at least one published port
