ops/docker/out/base/grafana-service.yaml
#! grafana-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: grafana-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: grafana
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: grafana
    ports:
        - name: grafana-3030
          port: 3030
          protocol: TCP
          targetPort: grafana-3000

# check if there is at least one published port
