ops/docker/out/base/keycloak-expose.yaml
#! keycloak-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: keycloak
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: keycloak
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: keycloak
    ports:
        - name: keycloak-9000
          port: 9000
          targetPort: keycloak-9000
        - name: keycloak-8080
          port: 8080
          targetPort: keycloak-8080
        - name: keycloak-8443
          port: 8443
          targetPort: keycloak-8443
