ops/docker/out/base/postgres-kc-db-service.yaml
#! postgres-kc-db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-kc-db-published
    namespace: docker
    labels:
        com.docker.compose.project: docker
        com.docker.compose.service: postgres-kc-db
spec:
    selector:
        com.docker.compose.project: docker
        com.docker.compose.service: postgres-kc-db
    ports:
        - name: postgres-k-5432
          port: 5432
          protocol: TCP
          targetPort: postgres-k-5432

# check if there is at least one published port
