ops/docker/out/base/microservices-network-network-policy.yaml
#! microservices-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: microservices-network-network-policy
    namespace: docker
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.microservices-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.microservices-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.microservices-network: "true"
